# glyphtune

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  dev_requirements.txt  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: main.yml
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/search/: search_index.js  search_index.json
0.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2/search/: search_index.js  search_index.json
docs/: docs_requirements.txt  mkdocs.yml
docs/src/: index.md
src/glyphtune/: __init__.py  _strings.py  arrays.py  signal.py
src/glyphtune/io/: __init__.py  file.py  stream.py
src/glyphtune/output/: __init__.py  file.py  stream.py
src/glyphtune/waveforms/: __init__.py  calculus.py  modulation.py  periodic_waves.py  resampling.py  waveform.py
src/glyphtune/waveforms/effects/: __init__.py  effect.py  stereo.py
tests/: test_arrays.py  test_signal.py  test_strings.py
tests/io/: test_file.py  test_stream.py
tests/waveforms/: test_calculus.py  test_modulation.py  test_operation_waveform.py  test_periodic_waves.py  test_resampling.py  test_waveform.py  test_waveform_equality.py  test_waveform_repr.py  test_waveform_representation.py
tests/waveforms/effects/: test_effect.py  test_effect_equality.py  test_effect_representation.py  test_stereo.py
